[gd_scene load_steps=8 format=3 uid="uid://i57n75xqrpt6"]

[ext_resource type="Script" uid="uid://bxs7yusdu03gn" path="res://menu_configuracao.gd" id="1_wtcfe"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0e48y"]
bg_color = Color(0.156863, 0.160784, 0.196078, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y32ns"]
bg_color = Color(0.294118, 0.298039, 0.32549, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_epypp"]
bg_color = Color(0.294118, 0.298039, 0.32549, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0hol4"]
bg_color = Color(0.294118, 0.298039, 0.32549, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q6r6c"]
bg_color = Color(0.294118, 0.298039, 0.32549, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kdubu"]
bg_color = Color(0.678431, 0.121569, 0.0705882, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[node name="Node2D" type="Node2D"]

[node name="MenuConfiguracao" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 720.0
offset_bottom = 1280.0
script = ExtResource("1_wtcfe")

[node name="ColorRect" type="ColorRect" parent="MenuConfiguracao"]
layout_mode = 0
offset_right = 720.0
offset_bottom = 1280.0
color = Color(0.156863, 0.160784, 0.196078, 1)

[node name="MarginContainer" type="MarginContainer" parent="MenuConfiguracao"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 0
offset_left = 32.0
offset_top = 30.0
offset_right = 686.0
offset_bottom = 1223.0

[node name="VBoxContainer" type="VBoxContainer" parent="MenuConfiguracao/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MenuConfiguracao/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 80)
layout_mode = 2
alignment = 1

[node name="VoltarButton" type="Button" parent="MenuConfiguracao/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_0e48y")
text = "<"

[node name="Label" type="Label" parent="MenuConfiguracao/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(500, 350)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_type_variation = &"HeaderLarge"
text = "Configurações"
horizontal_alignment = 1
max_lines_visible = 5
visible_characters_behavior = 1

[node name="ButtonList" type="VBoxContainer" parent="MenuConfiguracao/MarginContainer/VBoxContainer"]
layout_mode = 2
localize_numeral_system = false
theme_override_constants/separation = 10

[node name="PerfilButton" type="Button" parent="MenuConfiguracao/MarginContainer/VBoxContainer/ButtonList"]
custom_minimum_size = Vector2(500, 120)
layout_mode = 2
size_flags_vertical = 2
localize_numeral_system = false
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_y32ns")
text = "Perfil"

[node name="ContaButton" type="Button" parent="MenuConfiguracao/MarginContainer/VBoxContainer/ButtonList"]
custom_minimum_size = Vector2(500, 120)
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_epypp")
text = "Conta"

[node name="PreferenciasButton" type="Button" parent="MenuConfiguracao/MarginContainer/VBoxContainer/ButtonList"]
custom_minimum_size = Vector2(500, 120)
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_0hol4")
text = "Preferências"

[node name="SonsButton" type="Button" parent="MenuConfiguracao/MarginContainer/VBoxContainer/ButtonList"]
custom_minimum_size = Vector2(500, 120)
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_q6r6c")
text = "Sons e Notificações"

[node name="ExitButton" type="Button" parent="MenuConfiguracao/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
size_flags_stretch_ratio = 9.38
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_kdubu")
text = "Sair da conta
"
vertical_icon_alignment = 2
